- Move to lowercase names for the file names on the web site.  (After bitbucket wouldn't   allow a capitalized name I had a look around and this seems to be the recommended   practice.)

--- a/MacHg-Info.plist
+++ b/MacHg-Info.plist
@@ -58,6 +58,6 @@
 	<key>SUPublicDSAKeyFile</key>
 	<string>macHgPublicKey_dsa.pem</string>
 	<key>SUFeedURL</key>
-	<string>http://jasonfharris.com/MacHg/MacHgAppcast.xml</string>
+	<string>http://jasonfharris.com/machg/machg_appcast.xml</string>
 </dict>
 </plist>
