--- a/MacHg-Info.plist
+++ b/MacHg-Info.plist
@@ -59,5 +59,7 @@
 	<string>macHgPublicKey_dsa.pem</string>
 	<key>SUFeedURL</key>
 	<string>http://jasonfharris.com/machg/machg_appcast.xml</string>
+	<key>SUEnableAutomaticChecks</key>
+	<true/>
 </dict>
 </plist>
