Make sure that the correct GC settings are used in all builds.

--- a/BuildConfiguration/Base.xcconfig
+++ b/BuildConfiguration/Base.xcconfig
@@ -6,6 +6,7 @@ SDKROOT = macosx10.6
 VALID_ARCHS = i386 x86_64
 DEBUG_INFORMATION_FORMAT = dwarf-with-dsym
 PREBINDING = NO
+GCC_ENABLE_OBJC_GC = required
 GCC_C_LANGUAGE_STANDARD = gnu99
 ALWAYS_SEARCH_USER_PATHS = NO
 
