Compile with LLVM-GCC since Clang seems to result in an unusable binary.

--- a/BuildConfiguration/MacHG-All.xcconfig
+++ b/BuildConfiguration/MacHG-All.xcconfig
@@ -7,7 +7,10 @@ PRODUCT_NAME = MacHg
 FRAMEWORK_SEARCH_PATHS = $(inherited) $(FRAMEWORK_SEARCH_PATHS_QUOTED_1) "$(SRCROOT)/LinkedLibraries/BWToolkit" "$(SRCROOT)/LinkedLibraries"
 LIBRARY_SEARCH_PATHS = $(inherited) $(LIBRARY_SEARCH_PATHS_QUOTED_1)
 USER_HEADER_SEARCH_PATHS = "$(SRCROOT)/Classes/**"
-GCC_MODEL_TUNING = G5
+IBC_PLUGIN_SEARCH_PATHS = "$(SRCROOT)/LinkedLibraries/BWToolkit"
+OTHER_CFLAGS = $(inherited) $(OTHER_C_AND_CPLUSPLUSFLAGS)
+OTHER_CPLUSPLUSFLAGS = $(inherited) $(OTHER_C_AND_CPLUSPLUSFLAGS)
+OTHER_C_AND_CPLUSPLUSFLAGS = $(inherited)
 GCC_PRECOMPILE_PREFIX_HEADER = YES
 GCC_PREFIX_HEADER = MacHg_Prefix.pch
 
