--- a/BuildConfiguration/Base.xcconfig
+++ b/BuildConfiguration/Base.xcconfig
@@ -1,13 +1,17 @@
 // Global settings for all configurations
 
 
-ARCHS = $(ARCHS_STANDARD_32_64_BIT)
+ARCHS = i386 x86_64
 SDKROOT = macosx10.6
 VALID_ARCHS = i386 x86_64
+GCC_VERSION = com.apple.compilers.llvmgcc42
 DEBUG_INFORMATION_FORMAT = dwarf-with-dsym
 PREBINDING = NO
 GCC_ENABLE_OBJC_GC = required
 GCC_C_LANGUAGE_STANDARD = gnu99
+OTHER_CFLAGS = 
+OTHER_CPLUSPLUSFLAGS = 
+OTHER_C_AND_CPLUSPLUSFLAGS = // -fdiagnostics-show-category=name
 ALWAYS_SEARCH_USER_PATHS = NO
 
 FRAMEWORK_SEARCH_PATHS_QUOTED_1 = "$(SDK_DIR)/System/Library/Frameworks"
