- Add option to the appearance preferences to control the formatting of dates, if the   dates are relative to "now" or absolute of the form 27 Mar 17:56. (Several people have   requested this.)

--- a/Plists/UserDefaults.plist
+++ b/Plists/UserDefaults.plist
@@ -20,6 +20,8 @@
 	<integer>2</integer>
 	<key>BrowserBehaviourOptionDoubleClick</key>
 	<integer>1</integer>
+	<key>DateAndTimeFormat</key>
+	<integer>1</integer>
 	<key>DefaultAnnotationOptionChangeset</key>
 	<false/>
 	<key>DefaultAnnotationOptionDate</key>
