- Add new user preference for the default files view if no view has been used before for   the given repository.

--- a/Plists/UserDefaults.plist
+++ b/Plists/UserDefaults.plist
@@ -36,6 +36,8 @@
 	<true/>
 	<key>DefaultAnnotationOptionUser</key>
 	<true/>
+	<key>DefaultFilesView</key>
+	<integer>0</integer>
 	<key>DefaultHGIgnoreContents</key>
 	<string>syntax: glob
 .DS_Store</string>
