- Now that we have a number of panes also running around in the files view it can be a   little disconcerting to have the window change size when we change views.  Thus change   the default to all views having the same size.

--- a/Plists/UserDefaults.plist
+++ b/Plists/UserDefaults.plist
@@ -156,7 +156,7 @@
 	<key>UseWhichToolForMerging</key>
 	<integer>0</integer>
 	<key>ViewsHaveIndependentSizes</key>
-	<true/>
+	<false/>
 	<key>WarnAboutBadMercurialConfiguration</key>
 	<false/>
 </dict>
