--- a/Plists/UserDefaults.plist
+++ b/Plists/UserDefaults.plist
@@ -91,8 +91,12 @@
 	<true/>
 	<key>ExecutableLocationHG</key>
 	<string>/usr/local/bin/hg</string>
+	<key>DifferencesFileCountCutoff</key>
+	<integer>1</integer>
 	<key>FontSizeOfBrowserItems</key>
 	<real>11</real>
+	<key>FontSizeOfDifferencesWebview</key>
+	<integer>11</integer>
 	<key>HandleGeneratedOrigFiles</key>
 	<integer>0</integer>
 	<key>IncludeHomeHgrcInHGRCPATH</key>
@@ -117,6 +121,8 @@
 	<integer>1</integer>
 	<key>MacHgLogFileLocation</key>
 	<string>/tmp/MacHgTransactionLog</string>
+	<key>NumContextLinesForDifferencesWebview</key>
+	<integer>2</integer>
 	<key>OnApplicationActivationOpenWhat</key>
 	<integer>0</integer>
 	<key>PreferencesFadeSwitch</key>
