- Add a default option for the differences webview diff style.

--- a/Plists/UserDefaults.plist
+++ b/Plists/UserDefaults.plist
@@ -43,6 +43,8 @@
 .DS_Store</string>
 	<key>DefaultWorkspacePath</key>
 	<string>~</string>
+	<key>DifferencesWebviewDiffStyle</key>
+	<integer>1</integer>
 	<key>DisplayFileIconsInBrowser</key>
 	<true/>
 	<key>DisplayResultsOfAddRemoveRenameFiles</key>
