- Add the preferences item of DiffDisplaySizeLimit and restrict the diff sizes displayed   to be less that this number of million characters since WebViews have performance   problems displaying bigger diffs.

--- a/Plists/UserDefaults.plist
+++ b/Plists/UserDefaults.plist
@@ -43,6 +43,8 @@
 .DS_Store</string>
 	<key>DefaultWorkspacePath</key>
 	<string>~</string>
+	<key>DiffDisplaySizeLimit</key>
+	<real>0.5</real>
 	<key>DifferencesWebviewDiffStyle</key>
 	<integer>1</integer>
 	<key>DisplayFileIconsInBrowser</key>
