- Add the commit SubrepoSubstate option so users can control when the substate state is   recorded.

--- a/Plists/UserDefaults.plist
+++ b/Plists/UserDefaults.plist
@@ -159,6 +159,8 @@
 	<true/>
 	<key>SizeOfBrowserColumns</key>
 	<integer>210</integer>
+	<key>SubrepoSubstateCommit</key>
+	<integer>0</integer>
 	<key>ToolNameForDiffing</key>
 	<string></string>
 	<key>UseWhichToolForDiffing</key>
