- Add a Labels submenu, with items for adding and managing tags, branches, and bookmarks. - Re-organize the patch operations, and the history editing operations into a submenu.

--- a/Plists/UserDefaults.plist
+++ b/Plists/UserDefaults.plist
@@ -67,6 +67,8 @@
 	<true/>
 	<key>DisplayWarningForBranchNameRemoval</key>
 	<true/>
+	<key>DisplayWarningForCloseBranch</key>
+	<true/>
 	<key>DisplayWarningForFileDeletion</key>
 	<true/>
 	<key>DisplayWarningForMarkingFilesResolved</key>
