--- a/BuildConfiguration/Base.xcconfig
+++ b/BuildConfiguration/Base.xcconfig
@@ -4,7 +4,7 @@
 ARCHS = i386 x86_64
 SDKROOT = macosx10.7
 VALID_ARCHS = i386 x86_64
-GCC_VERSION = com.apple.compilers.llvmgcc42
+GCC_VERSION = com.apple.compilers.llvm.clang.1_0
 DEBUG_INFORMATION_FORMAT = dwarf-with-dsym
 PREBINDING = NO
 GCC_ENABLE_OBJC_GC = required
