--- a/MacHg-Info.plist
+++ b/MacHg-Info.plist
@@ -63,5 +63,7 @@
 	<string>http://jasonfharris.com/machg/machg_appcast.xml</string>
 	<key>SUPublicDSAKeyFile</key>
 	<string>macHgPublicKey_dsa.pem</string>
+	<key>NSSupportsAutomaticGraphicsSwitching</key>
+	<true/>
 </dict>
 </plist>
